Add webpack JS bundle to report
Step 1 towards plotting

--- a/janissary/reports/templates/report.html
+++ b/janissary/reports/templates/report.html
@@ -3,6 +3,10 @@
     <style type=text/css>
         {% include "report.css" %}
     </style>
+    <script type="application/javascript">
+        {% include "main.js" %}
+    </script>
+
 </head>
 <body>
     <h2>Game Information</h2>
