--- a/janissary/reports/templates/report.html
+++ b/janissary/reports/templates/report.html
@@ -1,103 +1,16 @@
 <html>
 <head>
-    <style type=text/css>
-        {% include "report.css" %}
-    </style>
     <script type="application/javascript">
-        {% include "main.js" %}
+        {{ include_file("main.js") }}
     </script>
     <script type="application/json" id="data">
         {{jsdata}}
     </script>
-
 </head>
 <body>
-    <h2>Game Information</h2>
-    <table>
-        {% for attr in game_attrs %}
-        <tr>
-            <td class="attrName">{{attr[0] + ":"}}</td>
-            <td>{{attr[1]}}</td>
-        </tr>
-        {% endfor %}
-    </table>
-    <h2>Players</h2>
-    <table>
-        <tr>
-            <th>Player Name</th>
-            <th>Civilization</th>
-            <th>Team</th>
-        </tr>
-        {% for player in players %}
-        <tr>
-            <td>{{player.name}}</td>
-            <td>{{player.civilization_name}}</td>
-            <td>{{player.team}}</td>
-        </tr>
-        {% endfor %}
-    </table>
-
-    <h2>Action Rate</h2>
-    <div style="width:75%;">
-        <canvas id="apsgraph"></canvas>
-    </div>
-
-    <h2>Unit Creation</h2>
-    This data is based on counting of unit training commands. As we have no idea when units are
-    lost, or for that matter when they complete training, this ideally shows the total number of 
-    units that were produced, or are queued to be procuded at the end of the game. However, if 
-    different unit types are produced concurrently at the same building, and some units are 
-    cancelled, this can lead to errors in the count. The analyzer may cancel the wrong unit
-    type. 
-    <table>
-        <tr>
-            {% for header in unit_production.total_units_table_header() %}
-            <th>{{header}}</th>
-            {% endfor %}
-        </tr>
-        {% for row in unit_production.total_units_rows() %}
-        <tr>
-            {% for cell in row %}
-            <td>{{cell}}</td>
-            {% endfor %}
-        </tr>
-        {% endfor %}
-    </table>
-    <h2>Command Summary</h2>
-    Shows total count of each of the command type in log, by player. In some cases, commands 
-    have multiple purposes. For example, GARRISON is used to garrison troops in a building, to 
-    pack/unpack a trebuchet, and to cancel units in training. 
-    <h3>Player Commands</h3>
-    <table>
-        <tr>
-            {% for header in command_summary.player_command_headers() %}
-            <th>{{header}}</th>
-            {% endfor %}
-        </tr>
-        {% for row in command_summary.player_command_rows() %}
-        <tr>
-            {% for cell in row %}
-            <td>{{cell}}</td>
-            {% endfor %}
-        </tr>
-        {% endfor %}
-    </table>
-    <h3>Unassigned Commands</h3>
-    Some commands are recorded, but are not assigned to a particular player. 
-    This could be either because there is not enough information in the log 
-    to correlate them, or because support for these commands just hasn't been
-    added yet. 
-    <table>
-        <tr>
-            {% for header in command_summary.unassigned_command_headers() %}
-            <th>{{header}}</th>
-            {% endfor %}
-        </tr>
-        <tr>
-            {% for count in command_summary.unassigned_command_counts() %}
-            <td>{{count}}</td>
-            {% endfor %}
-        </tr>
-    </table>
+    <div id="root"></div>
+    <noscript>
+            You need to enable JavaScript to run this app.
+    </noscript>
 </body>
 </html>
