Update noscript copy

--- a/janissary/reports/templates/report.html
+++ b/janissary/reports/templates/report.html
@@ -7,7 +7,7 @@
 <body>
     <div id="root"></div>
     <noscript>
-            You need to enable JavaScript to run this app.
+            Sorry, this report requires javascript and it appears you do not have it enabled.
     </noscript>
     <script type="application/javascript">
         {{ include_file("main.js") }}
